<resources>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="time_prev">Previous</string>
    <string name="time_next">Next</string>
    <string name="PNUF">Power On | USB Off</string>
    <string name="PNUN">Power On | USB On</string>
    <string name="poweroff">Power Off</string>
    <string name="turned_on">Turned on</string>
    <string name="turned_off">Turned off</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_thp">THPActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="app_name">Smarthome</string>
    <string name="frv_def_load_more_view_status_normal">松开加载更多</string>
    <string name="frv_def_load_more_view_status_loading">加载数据中，请稍等...</string>
    <string name="frv_def_load_more_view_status_error">加载失败，请重试</string>
    <string name="username">Username</string>
    <string name="kardia_kuben">Kardia Kuben</string>
    <string name="psssword">Psssword</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_username_or_your_email_address_and_n_we_ll_deliver_your_username_and_a_link_to_n_enter_a_new_password">Enter your username or your email address and \n we\'ll deliver your username and a link to \n enter a new Password</string>
    <string name="email">Email</string>
    <string name="current_version_is">Current version is</string>
    <string name="inputpassword">Please enter the password</string>
    <string name="kernelVersion">Kernel version</string>
    <string name="next">Next step</string>
    <string name="password">Password</string>
    <string name="rootfsVersion">System version</string>
    <string name="save">Save</string>
    <string name="uBootVersion"> uBoot version</string>
    <string name="wait_connect">Queued for connection</string>
    <string name="connect_power_wait">Power on and wait for the camera to give out the connection cue tone \n if no connection cue tone is heard, please reset the camera</string>
    <string name="connect_power">Connected to the power supply</string>
    <string name="yes">Yes </string>
    <string name="no">No</string>
    <string name="input_port">Please enter the port No.</string>
    <string name="ftp_control"> FTP setting</string>
    <string name="domain_name_ip">Domain name or ip</string>
    <string name="port1">Port</string>
    <string name="input_domain_name_ip">Please enter field name or IP address</string>
    <string name="input_username">Please enter the user name</string>
    <string name="send_sound_wave_prompt">Try to keep the mobile phone and device within 5m from the router</string>
    <string name="i_get_it">I got it.</string>
    <string name="give_up_register">Give up registration?</string>
    <string name="device_name">Device name</string>
    <string name="ip_address">ip address</string>
    <string name="device_ready_connect_sound1">When camera is ready</string>
    <string name="device_ready_connect_sound2">it releases prompt tone for connection</string>
    <string name="device_ready">Device ready</string>
    <string name="no_listen_reason1">1. Please confirm that the device is not connected with network cable</string>
    <string name="no_listen_reason2">2. Please confirm that device power is being normally connected</string>
    <string name="can_try">You may attempt:</string>
    <string name="reset_prompt">To slightly insert reset hole using thimble until reset prompt tone is heard, await about 30 sec. when connection prompt tone is given off</string>
    <string name="add_sound1">Please turn louder handset volume</string>
    <string name="add_sound2">Keep a 30cm distance away from camera</string>
    <string name="intelligent_online">Smartlink</string>
    <string name="listen_connect_voice">Hear connection cue tone</string>
    <string name="not_listen_connect_voice">No connection cue tone?</string>
</resources>