<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="@dimen/dialog_big_prompt_width"
    android:layout_height="match_parent"
    android:background="@drawable/free_dialog_bg"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_listen_reason1"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/dialog_content_text_size"
        android:layout_marginTop="49dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_text_space"
        android:text="@string/no_listen_reason2"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/dialog_content_text_size"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/can_try"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_set"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/reset_prompt"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/dialog_content_text_size"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/reset"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tx_know"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/i_get_it"
        android:textColor="@color/radar_blue"
        android:textSize="@dimen/text_size_set"
        android:gravity="center"/>

</LinearLayout>