<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical"  >
    <RelativeLayout
        android:id="@+id/ftp_layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/tab_bar"
        android:orientation="vertical" >
		<ImageView 
            android:id="@+id/ftp_back_btn"
            style="@style/button_back_title_white"
            />
        <TextView
            android:id="@+id/ftp_tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ftp_control"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            />
        
        <Button 
            android:id="@+id/ftp_save_btn"
            android:layout_width="@dimen/tab_btn_width"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/tab_btn_margin"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/save"
            android:textColor="@color/text_color_white"
            android:background="@drawable/tab_button"
            android:textSize="@dimen/text_save_size"
            
            />
    </RelativeLayout>
    <View style="@style/view_line"
        android:layout_marginTop="11dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="105.5dp"
        	android:layout_height="match_parent"
        	android:text="@string/domain_name_ip"
        	android:textSize="15sp"
        	android:textColor="@color/black"
        	android:gravity="center_vertical"
        	android:paddingLeft="18.5dp"
            />
        <EditText
            android:id="@+id/hostname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alpha"
            android:hint="@string/input_domain_name_ip"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:singleLine="true" 
            android:inputType="textVisiblePassword"
            />
    </LinearLayout>
    <View style="@style/view_line"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="105.5dp"
        	android:layout_height="match_parent"
        	android:text="@string/username"
        	android:textSize="15sp"
        	android:textColor="@color/black"
        	android:gravity="center_vertical"
        	android:paddingLeft="18.5dp"
            />
        <EditText
            android:id="@+id/usrname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alpha"
            android:hint="@string/input_username"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:inputType="text"
            />
    </LinearLayout>
    <View style="@style/view_line"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="105.5dp"
        	android:layout_height="match_parent"
        	android:text="@string/password"
        	android:textSize="15sp"
        	android:textColor="@color/black"
        	android:gravity="center_vertical"
        	android:paddingLeft="18.5dp"
            />
        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alpha"
            android:hint="@string/inputpassword"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <View style="@style/view_line"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="105.5dp"
        	android:layout_height="match_parent"
        	android:text="@string/port1"
        	android:textSize="15sp"
        	android:textColor="@color/black"
        	android:gravity="center_vertical"
        	android:paddingLeft="18.5dp"
            />
        <EditText
            android:id="@+id/svrport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alpha"
            android:hint="@string/input_port"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:singleLine="true" 
            android:maxLength="5"
            android:inputType="number"
            />
    </LinearLayout>
    <View style="@style/view_line"/>
</LinearLayout>
