<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <View
        style="@style/view_line"
        android:layout_marginTop="@dimen/item_set_margin_top"/>

    <RelativeLayout
        android:id="@+id/rl_device_name"
        style="@style/bg_gray_itme"
        >

        <TextView
            android:id="@+id/tx_name"
            style="@style/text_set"
            android:layout_toRightOf="@+id/icon_account"
            android:text="@string/device_name"
            />

        <ImageView
            android:id="@+id/device_name_arrow"
            style="@style/right_arrow"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/pt_device_name"
            style="@style/gray_text_style"
            android:layout_width="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@+id/device_name_arrow"
            android:layout_toRightOf="@+id/tx_name"
            android:gravity="right"
            android:maxLines="1"
            android:ellipsize="end"/>
    </RelativeLayout>

    <View style="@style/view_line"/>

    <RelativeLayout
        style="@style/bg_gray_itme">

        <TextView
            style="@style/text_set"
            android:layout_toRightOf="@+id/icon_account"
            android:text="@string/current_version_is"
            />

        <com.jwkj.widget.ProgressTextView
            android:id="@+id/pt_current_version"
            style="@style/gray_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="33dp"/>
    </RelativeLayout>

    <View style="@style/view_line"/>

    <RelativeLayout
        style="@style/bg_gray_itme"
        >

        <TextView
            style="@style/text_set"
            android:layout_toRightOf="@+id/icon_account"
            android:text="@string/uBootVersion"
            />

        <com.jwkj.widget.ProgressTextView
            android:id="@+id/pt_uboot_version"
            style="@style/gray_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="33dp"/>
    </RelativeLayout>

    <View style="@style/view_line"/>

    <RelativeLayout
        style="@style/bg_gray_itme"
        >

        <TextView
            style="@style/text_set"
            android:layout_toRightOf="@+id/icon_account"
            android:text="@string/kernelVersion"
            />

        <com.jwkj.widget.ProgressTextView
            android:id="@+id/pt_kernel_version"
            style="@style/gray_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="33dp"/>
    </RelativeLayout>

    <View style="@style/view_line"/>

    <RelativeLayout
        style="@style/bg_gray_itme"
        >

        <TextView
            style="@style/text_set"
            android:layout_toRightOf="@+id/icon_account"
            android:text="@string/rootfsVersion"
            />

        <com.jwkj.widget.ProgressTextView
            android:id="@+id/pt_system_version"
            style="@style/gray_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="33dp"/>
    </RelativeLayout>

    <View style="@style/view_line"/>

    <RelativeLayout
        style="@style/bg_gray_itme"
        android:visibility="gone"
        >

        <TextView
            style="@style/text_set"
            android:layout_toRightOf="@+id/icon_account"
            android:text="@string/ip_address"
            />

        <com.jwkj.widget.ProgressTextView
            android:id="@+id/pt_ip_address"
            style="@style/gray_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="33dp"/>
    </RelativeLayout>

    <View style="@style/view_line"/>

</LinearLayout>
