<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#11ffffff">

    <LinearLayout
        android:layout_width="@dimen/dialog_lay_widht"
        android:layout_height="@dimen/dialog_lay_height"
        android:background="@drawable/free_dialog_bg"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/title"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="15.5dp"
            android:paddingRight="15.5dp"
            android:text="@string/give_up_register"
            android:textColor="#000000"
            android:textSize="@dimen/dialog_title_text_size" />

        <View
            style="@style/view_line"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_no"
                android:text="@string/no"
                style="@style/dialog_blue_txt_button_style"/>
            <View
                style="@style/view_line_shu_black"
                />
            <TextView
                android:id="@+id/tv_yes"
                android:text="@string/yes"
                style="@style/dialog_gary_txt_button_style"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>