<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg">
    <RelativeLayout
        android:id="@+id/layout_title"
        style="@style/bg_title_black">
		<ImageView 
            android:id="@+id/back_btn"
            style="@style/button_back_title_white"
            android:layout_alignParentLeft="true"
            />
        <com.nuowei.smarthome.view.textview.DinProTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wait_connect"
            android:textColor="@color/text_title"
            android:textSize="@dimen/title_text_size"
            />
    </RelativeLayout>
    <com.nuowei.smarthome.view.textview.DinProTextView
        android:id="@+id/tv_ajust_voice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:text="@string/add_sound1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_large"
        android:layout_marginTop="33dp"
       />
    <com.nuowei.smarthome.view.textview.DinProTextView
        android:id="@+id/tv_ajust_voice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ajust_voice1"
        android:text="@string/add_sound2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/radar_blue"
        android:textSize="@dimen/text_size_large"
        android:layout_marginTop="8dp"
        />
    <!--
     <RelativeLayout 
         android:id="@+id/r_icon"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_below="@+id/tv_ajust_voice1"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
        >
         <ImageView 
             android:id="@+id/tv_phone"
             android:layout_width="172dp"
             android:layout_height="150dp"
             android:background="@drawable/sound_wave_phone"
             android:layout_alignParentBottom="true"
             />
         <ImageView 
             android:id="@+id/iv_sound_wave_device"
             android:layout_width="84dp"
             android:layout_height="112dp"
             android:layout_toRightOf="@+id/tv_phone"
             android:background="@drawable/sound_wave_device"
             />
     </RelativeLayout>
     -->
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_ajust_voice2"
         android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/send_sound_wave"/>
     <com.nuowei.smarthome.view.textview.DinProTextView
         android:id="@+id/tv_sound_wave_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/send_wave"
         android:text="@string/send_sound_wave_prompt"
         android:textSize="@dimen/text_size_normal"
         android:textColor="@color/text_color_black"
         android:visibility="gone"/>
     
      <Button
          android:id="@+id/send_wave"
          style="@style/button_blue_style"
          android:text="@string/next" android:layout_marginBottom="56dp"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"/>
</RelativeLayout>
